# bin-world-frontend

./: .gitignore  README.md  package.json  vite.config.ts
backend/: README.md
docs/: 1.项目架构.md  2.文件选取功能.md  rust-optimization.md  安装.md
frontend/: .gitignore
frontend/src/: App.vue
frontend/src/components/: ImagePicker.vue
frontend/src/router/: index.ts
frontend/src/views/: ImagePickerView.vue
scripts/: README.md  dev.sh  setup-rust-cache.sh
src/: config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/src/: lib.rs  main.rs
src/components/: ImagePicker.vue  LargeImageViewer.vue
src/router/: index.ts
src/types/: file.ts
src/utils/: fileDialog.ts
src/views/: ImageViewerView.vue
